feat: configura conexión a PostgreSQL y crea endpoint /api/collections con joins
- Configura conexión a la base de datos PostgreSQL mediante Pool en src/config/db.js usando variables de entorno
- Crea router principal en src/routes/index.js con:
  - Endpoint básico en /api
  - Endpoint en /api/collections que hace JOIN entre collections, albums, artists y formats, ordenado por purchase_date
- Configura servidor Express en src/server.js con:
  - express.json()
  - cors()
  - dotenv.config()
  - app.use('/api', routes)
- Pruebas exitosas en http://localhost:5000/api/collections desde navegador y Postman

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "nodemon src/index.js"
+     "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/patriciabernardos/mousiteca-api/issues"
   },
